[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/MenuScene.gd" type="Script" id=1]
[ext_resource path="res://sprites/BackGroundBlue.png" type="Texture" id=2]
[ext_resource path="res://fonts/Symtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/ColorElement.gd" type="Script" id=4]
[ext_resource path="res://sprites/BackgroundGray.png" type="Texture" id=5]
[ext_resource path="res://sprites/BackgroundRed.png" type="Texture" id=6]
[ext_resource path="res://sprites/BackgroundPink.png" type="Texture" id=7]
[ext_resource path="res://sprites/BackgroundBlue.png" type="Texture" id=8]
[ext_resource path="res://sprites/BackgroundOrange.png" type="Texture" id=9]
[ext_resource path="res://sprites/BackgroundDarkGreen.png" type="Texture" id=10]
[ext_resource path="res://sprites/BackgroundBlack.png" type="Texture" id=11]
[ext_resource path="res://sprites/BackgroundPurple.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]

size = 180
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 27
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 27
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 12.5764, 12.6009 )

[node name="MenuScene" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

scale = Vector2( 60, 33.75 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="GameName" type="RichTextLabel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 199.0
margin_top = 43.0
margin_right = 1723.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Memory Game"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="QuitButton" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 698.0
margin_top = 584.0
margin_right = 818.0
margin_bottom = 630.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="StartButton" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 698.0
margin_top = 334.0
margin_right = 818.0
margin_bottom = 380.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Credits" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 788.0
margin_top = 922.0
margin_right = 1224.0
margin_bottom = 1062.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Programming: Tzoop Icons: Game-icons.net Font: Symtext"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="ClickColors" type="RichTextLabel" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 600.0
margin_right = 560.0
margin_bottom = 760.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "click color blocks to change the background color"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="GrayElement" type="Area2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 240, 460 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="GrayElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="RedElement" type="Area2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 240, 540 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="RedElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="PinkElement" type="Area2D" parent="." index="8"]

editor/display_folded = true
position = Vector2( 320, 540 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinkElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="PinkElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="BlueElement" type="Area2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 400, 540 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="BlueElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="OrangeElement" type="Area2D" parent="." index="10"]

editor/display_folded = true
position = Vector2( 480, 540 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrangeElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="OrangeElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="DarkGreenElement" type="Area2D" parent="." index="11"]

editor/display_folded = true
position = Vector2( 400, 460 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DarkGreenElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="DarkGreenElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="BlacKElement" type="Area2D" parent="." index="12"]

editor/display_folded = true
position = Vector2( 320, 460 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlacKElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="BlacKElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="PurpleElement" type="Area2D" parent="." index="13"]

editor/display_folded = true
position = Vector2( 480, 460 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PurpleElement" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="PurpleElement" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_button_down"]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]


